tests/data/bad/bad_inherit_subclass_class.py
from ..base_cfg import cfg
from ..base_class import BaseClass

cfg = cfg.clone()

cfg.CLASSES.ANOTHER = BaseClass
